[package]
name = "rbloom"
version = "1.4.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rbloom"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module", "abi3-py37"] }  # stable ABI with minimum Python version 3.7
# pyo3-file = "0.7.0"
pyo3-file = { git = "https://github.com/Dr-Emann/pyo3-file", branch = "push-muyqwrvqqmnt" }
