[package]
name = "rbloom"
version = "1.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rbloom"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = [
    "extension-module",
    "abi3-py37",
] } # stable ABI with minimum Python version 3.7
